--- a/templates/header.html
+++ b/templates/header.html
@@ -1,28 +1,38 @@
-<div id="header" style="
-    font-family: 'YuGothB.ttc';
-    height:70px;
-    width:100%;
-    padding:10px 20px 10px 20px;
-    position: fixed;
-    background-color: #26d0c9;
-    z-index: 10;
-    top:0px;
-    right:0px;
-    left:0px;
-    float: left;
-    padding:15px;">
-  <dev id="header-logo" style="
-    font-family: 'YuGothB.ttc';
-    float: left;
-    text-align: center;
-">
-<h2><a href="/mine/" style="color:white;font-size:30px;">Home</a></h2></dev>
-<dev id="header-list">
-{% if user.is_authenticated %}
-<a href="/mine/profile" style="color:white;">{{ request.user }}</a> / 
-<a href="/accounts/logout" style="color:white;">ログアウト</a>
-{% else %}
-<a href="/mine/profile" style="color:white;">ログイン</a> / 
-<a href="/accounts/logout" style="color:white;">ログアウト</a>
-{% endif %}
-</div>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">DjangoMinecraft</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/mine/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/mine/console">Clinet</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Tools
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="/mine/query">Query</a></li>
+                            <li><a class="dropdown-item" href="/mine/script">Script</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="/mine/config">Config</a></li>
+                            
+                        </ul>
+                    </li>
+                    <li><a class="nav-link" href="/mine/help">Help</a></li>
+                </ul>
+                {% if user.is_authenticated %}
+                <button class="btn btn-outline-danger" type="submit" onclick="location.href='/accounts/logout'">Logout</button>
+                <button class="btn btn-outline-success" type="submit" onclick="location.href='/mine/profile'">{{ request.user }}</button>
+                {% else %}
+                <button class="btn btn-outline-success" onclick="location.href='/mine/profile'" type="submit">Login</button>
+                {% endif %}
+            </div>
+        </div>
+    </nav>
+</header>
