--- a/templates/index.html
+++ b/templates/index.html
@@ -4,45 +4,36 @@
 <head>
     <meta charset="utf-8"/>
     <title>DjangoMicraft!</title>
-    <style>
-        h1 {
-        border-bottom: 2px solid gray;
-        }
-        
-    </style>
-    <link rel="stylesheet" href="/static/bootstrap.css">
     <link href="/static/style.css" rel="stylesheet">
+    <style>
+    h1 {
+        border-bottom: 2px solid gray;
+    }
+    #h2 {
+        font-size:20px;
+    }
+    #h1 {
+        font-size:30px;
+    }
+    </style>
 </head>
 <body>
 {% include "header.html" %}
-<div id="content" style="
-    font-family: 'YuGothB.ttc';
-    float:left;
-    background-color: black;
-    color: white;
-    font-size: 12px;
-    position:absolute;
-    top:80px;
-    right:420px;
-    left:10px;
-    opacity: 0.9; 
-    padding:10px;
-    ">
-    <h1 id="djnagominecraftrcon" style="font-size:30px;">DjnagoMinecraftRcon</h1>
-    <p> DjangoからMinecraftを制御します。</p>
-    <h1 id="機能" style="font-size:30px;">機能</h1>
-    <h2 id="コンソール--mineconsole" style="font-size:20px;">コンソール @ <a href="/mine/console" style="color:white;">/mine/console</a></h2>
+<div id="content" style="padding:10px;" class="container mt-5">
+    <div class="text-center mb-5">
+        <h1 class="display-5 mb-5">DjnagoMinecraftRcon</h1>
+        <p class="text-muted fs-5">DjangoからMinecraftを制御します。</p>
+    </div>
+    <h1 id="h1">機能</h1>
+    <h2 id="h2">コンソール</h2>
     <p> /をつけて入力でコマンドを実行します。
-     /をつけないとチャットになります。</p>
-    <h2 id="query--minequery" style="font-size:20px;">Query @ <a href="/mine/query" style="color:white;">/mine/query</a></h2>
+    /をつけないとチャットになります。</p>
+    <h2 id="h2">Query</h2>
     <p> Queryを飛ばします。</p>
-    <h2 id="stats--minestats近日実装" style="font-size:20px;">Stats @ /mine/stats(近日実装)</h2>
-    <p> サーバーの統計を出します。</p>
-    <h2 id="config--mineconfig" style="font-size:20px;">Config @ <a href="/mine/config" style="color:white;">/mine/config</a></h2>
+    <h2 id="h2">Config</h2>
     <p> サーバーの設定を保存します。</p>
-    <h1 style="font-size:30px;">Licence</h1>
-    <p>Created by <a href="https://github.com/ocean0801" style="color:white;">ocean0801</a></p>
+    <h1 id="h1">Licence</h1>
+    <p>Created by <a href="https://github.com/ocean0801" style="color:black;">ocean0801</a></p>
     <p>Use MoonsApps,Google.com,Bootstrap</p>
 </div>
-{% include "sidebar.html" %}
 </body>
