--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -23,7 +23,7 @@
     padding:10px;
     ">
     {% if form.errors %}
-    <p style="color: red;">ユーザー名とパスワードが一致しません。</p>
+    <p style="color: red;">ユーザー名とパスワードが一致しません。</p>¡
 {% endif %}
 
 {% if next %}
@@ -38,7 +38,7 @@
 {% csrf_token %}
 <table>
 <tr>
-    <td>{{ form.username.label_tag }}</td>
+    <td>{{ form.username.label_tag }}   </td>
     <td>{{ form.username }}</td>
 </tr>
 <tr>
@@ -47,9 +47,8 @@
 </tr>
 </table>
 
-<input type="submit" value="login">
+<input type="submit" value="login"> 
 <input type="hidden" name="next" value="{{ next }}">
 </form>
 </div>
-{% include "sidebar.html" %}
 </body>
