--- a/templates/script_page2.html
+++ b/templates/script_page2.html
@@ -7,52 +7,27 @@
     <link rel="stylesheet" href="/static/bootstrap.css">
     <link href="/static/style.css" rel="stylesheet">
     <style>
-        #box5{
-            border: 1px solid #333;
-            padding:10px;
-            background: #f2f2f2;
-            display: inline-block;
-            font-weight: bold;
-            transition: .10s;
-            margin: 10px;
-        }
-        #box5:hover{
-            background: #26D0C9;
-        }
-        h3 {
-        border-bottom: 2px solid #dee7ec;
+        h2 {
+            border-bottom: 2px solid #dee7ec;
         }
     </style>
 </head>
 {% include "header.html" %}
-<div id="content" style="
-    font-family: 'YuGothB.ttc';
-    float:left;
-    background-color: black;
-    color: white;
-    font-size: 12px;
-    position:absolute;
-    top:80px;
-    right:420px;
-    left:10px;
-    opacity: 0.9;
-  ">
+<div id="content" style="padding:10px;">
     <form method="post" action="{% url 'submit3' %}">
     {% csrf_token %}
     <h2>Editting script</h2>
-    <h3>Setting</h3>
     <div class="input-group" style="width:300px;margin: 10px;">
         <span class="input-group-text" id="basic-addon1">Name</span><input id="box2" type="text" value="{{ name }}" name="name" class="form-control">
     </div>
     <div class="form-group" style="width:300px;margin: 10px;">
         <span class="input-group-text" id="basic-addon1" style="width:600px;">Script</span>
         <textarea name="com" style="height: 200px;width:600px;" class="form-control" id="exampleFormControlTextarea1" rows="3">{{ scripts }}</textarea>
-  </div>
-  <input class="btn btn-primary" type="submit" value="Save" style="margin: 10px;">
+    </div>
+    <input class="btn btn-primary" type="submit" value="Save" style="margin: 10px;">
 </form>
 {{ debug }}
 </div>
-{% include "sidebar.html" %}
 <script>
 document.getElementById("box1").focus();
 </script>
